Added a contacts post route.
