# src/services/contacts/routes.ts
@@ -1,6 +1,7 @@
 import { Request, Response } from 'express'
 
-import { getContactsByName, getContactByName } from './ContactsControl'
+import { Contact } from '../../models/Contact'
+import { retrieveContacts, retrieveContact, createContact } from './ContactsControl'
 
 export default [
   {
@@ -8,7 +9,7 @@ export default [
     method: 'get',
     handler: [
       async (req: Request, res: Response) => {
-        const contacts = await getContactsByName()
+        const contacts = await retrieveContacts()
         res.status(200).send(contacts)
       }
     ]
@@ -19,7 +20,18 @@ export default [
     handler: [
       async (req: Request, res: Response) => {
         const contactID: string = req.params.contactID
-        const contact = await getContactByName(contactID)
+        const contact = await retrieveContact(contactID)
+        res.status(200).send(contact)
+      }
+    ]
+  },
+  {
+    path: '/api/v1.0/contacts',
+    method: 'post',
+    handler: [
+      async (req: Request, res: Response) => {
+        const newContact: Contact = req.body
+        const contact = await createContact(newContact)
         res.status(200).send(contact)
       }
     ]
